fix wp-media alignleft and alignright

--- a/assets/less/components/_wp-classes.less
+++ b/assets/less/components/_wp-classes.less
@@ -8,6 +8,7 @@
 .alignleft,
 .alignright {
   margin-bottom: (@line-height-computed / 2);
+  display: block; // full width for small screens
 }
 figure.alignnone {
   margin-left: 0;
@@ -15,7 +16,7 @@ figure.alignnone {
   max-width: 100%;
 }
 
-@media (min-width: @screen-sm-min) {
+@media (min-width: @screen-tablet) {
   // Only float images if not on an extra small device like smartphones
   .alignleft {
     float: left;
